--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Merhaba GitHub Pages</title>
+  <title>İBİNE HUMEN</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 2rem; line-height: 1.6; }
-    .card { max-width: 680px; padding: 1.5rem; border: 1px solid #e5e7eb; border-radius: 12px; }
+    .card { max-width: 1000px; padding: 2rem; border: 2px solid #e5e7eb; border-radius: 15px; }
   </style>
 </head>
 <body>
@@ -16,3 +16,4 @@
   </div>
 </body>
 </html>
+
