--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>İBİNE HUMEN</title>
+  <title>Ali Cenik</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 2rem; line-height: 1.6; }
     .card { max-width: 1000px; padding: 2rem; border: 2px solid #e5e7eb; border-radius: 15px; }
@@ -11,9 +11,10 @@
 </head>
 <body>
   <div class="card">
-    <h1>Merhaba 👋</h1>
+    <h1>İBİNE HUMEN 👋</h1>
   </div>
 </body>
 </html>
+
 
 
