Change greeting message in index.html
Updated the greeting message in the HTML body to welcome users to the website.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ba <!doctype html>
 <html lang="tr">
 <head>
   <meta charset="utf-8" />
@@ -11,10 +11,11 @@
 </head>
 <body>
   <div class="card">
-    <h1>İBİNE HUMEN 👋</h1>
+    <h1>Merhaba web sayfama hoş geldiniz. Sitem kurulum aşamasındadır... 👋</h1>
   </div>
 </body>
 </html>
+
 
 
 
