--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ba <!doctype html>
+<!doctype html>
 <html lang="tr">
 <head>
   <meta charset="utf-8" />
@@ -6,7 +6,7 @@ ba <!doctype html>
   <title>Ali Cenik</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 2rem; line-height: 1.6; }
-    .card { max-width: 1000px; padding: 2rem; border: 2px solid #e5e7eb; border-radius: 15px; }
+    .card { max-width: 1200px; padding: 2rem; border: 2px solid #e5e7eb; border-radius: 15px; }
   </style>
 </head>
 <body>
@@ -15,6 +15,7 @@ ba <!doctype html>
   </div>
 </body>
 </html>
+
 
 
 
