Enhance index.html with additional heading
Added a second heading to welcome message.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
   <div class="card">
-    <h1>Merhaba web sayfama hoş geldiniz. Sitem kurulum aşamasındadır... 👋</h1>
+    <h1>Merhaba web sayfama hoş geldiniz👋</h1>
+    <h2>Sitem kurulum aşamasındadır... </h2>
   </div>
 </body>
 </html>
+
 
 
 
