--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="project-grid">
             <div class="project-card">
                 <div class="project-info">
-                    <h3>433 Mhz kumanda ile Led Kontrol Porjesi</h3>
+                    <h3>433 Mhz kumanda ile Led Kontrol Projesi</h3>
                     <p>Projeniz hakkında kısa bir açıklama. Hangi teknolojileri kullandınız?</p>
                     <a href="#" target="_blank">İncele <i class="fas fa-external-link-alt"></i></a>
                 </div>
@@ -56,4 +56,5 @@
 
 </body>
 </html>
+
 
